[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core~=1.9.0"]

[tool]

[tool.coverage.coverage_conditional_plugin.rules]
py-gte-39 = "sys_version_info >= (3, 9)"
py-lt-39 = "sys_version_info < (3, 9)"

[tool.coverage.paths]
source = [
  "src/tm_devices",
  ".tox/**/site-packages/tm_devices",
]

[tool.coverage.report]
exclude_lines = [
  "if TYPE_CHECKING:",
  "pragma: no cover",
  "raise NotImplementedError",
]
fail_under = 100
omit = [
  "**/tm_devices/commands/**",  # TODO: remove this exclusion
]
show_missing = true
skip_empty = true

[tool.coverage.run]
branch = true
cover_pylib = false
patch = ["subprocess"]
plugins = ["coverage_conditional_plugin"]
source = ["tm_devices"]

[tool.docformatter]
close-quotes-on-newline = true
in-place = true
recursive = true
wrap-descriptions = 100
wrap-summaries = 0

[tool.poetry]
authors = [
  "Tektronix <opensource@tektronix.com>",
  "Nicholas Felt <nicholas.felt@tektronix.com>",
]
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Intended Audience :: Developers",
  "Intended Audience :: Science/Research",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3.9",  # manually add this classifier since Poetry won't add it automatically due to the mimimum Python version being 3.9.2  # TODO: Drop Python 3.9: Remove this classifier
  "Topic :: Scientific/Engineering :: Interface Engine/Protocol Translator",
  "Topic :: Scientific/Engineering",
  "Topic :: System :: Hardware :: Hardware Drivers",
]
description = "Manage connections and interactions with Test & Measurement devices."
documentation = "https://tm-devices.readthedocs.io/stable/"
homepage = "https://pypi.org/project/tm_devices/"
keywords = [
  "REST API",
  "SCPI",
  "TSP",
  "Tektronix",
  "Test & Measurement",
  "VISA",
]
license = "Apache-2.0"
maintainers = [
  "Tektronix <opensource@tektronix.com>",
  "Nicholas Felt <nicholas.felt@tektronix.com>",
]
name = "tm_devices"
readme = "README.md"
repository = "https://github.com/tektronix/tm_devices"
version = "3.5.0"

[tool.poetry.dependencies]
colorlog = "^6.9.0"
dc-schema = "^0.0.8"
gpib-ctypes = "^0.3.0"
jsonschema = {extras = ["format-nongpl"], version = "^4.23.0"}
libusb-package = "^1.0.26.0,!=1.0.26.2"  # 1.0.26.2 doesn't work with Python 3.12
packaging = ">=24.0"
psutil = ">=6.0.0"
pyserial = "^3.5"
python = ">=3.9.2,<3.14"  # This is the main Python version requirement
python-dateutil = "^2.8.2"
pyusb = "^1.2.1"
pyvicp = "^1.1.0"
pyvisa = "^1.12.0"
pyvisa-py = "^0.7.2"
pyvisa-sim = "^0.6.0"
pyyaml = "^6.0"
requests = "^2.31.0"
tomli = "^2.0.1"
tomli-w = "^1.0.0"
typing-extensions = "^4.10.0"
tzlocal = "^5.2"
urllib3 = "^2.0"
zeroconf = "^0.148.0"

[tool.poetry.group.dev.dependencies]
nodeenv = "^1.9.1"
pip = "^25.0"
poetry = "^1.8.0"
poetry-audit-plugin = "^0.4.0"
poetry-plugin-export = "^1.7.1"
poetry-pre-commit-plugin = "^0.2.2"
pre-commit = "^4.2"
pylint = [
  {python = "~=3.9.2", version = "3.3.9"},  # TODO: Drop Python 3.9: remove this entry
  {python = ">=3.10", version = "4.0.2"},
]
pyright = {extras = ["nodejs"], version = "1.1.407"}
pyroma = "^5.0"
tox = "^4.0"
tox-gh-actions = "^3.1.0"
twine = "^6.0.1"
types-python-dateutil = "^2.9"
types-pyyaml = "^6.0"
types-requests = "^2.31"
wheel = "^0.45.0"

[tool.poetry.group.docs.dependencies]
black = "^25.1.0"
codespell = "^2.2.6"
griffe = "^1.1.0"
mkdocs = "^1.6.0"
mkdocs-ezglossary-plugin = "^2.0.0"
mkdocs-gen-files = "^0.6.0"
mkdocs-include-markdown-plugin = "^7.1.5"
mkdocs-literate-nav = "^0.6.1"
mkdocs-macros-plugin = "^1.0.5"
mkdocs-mermaid2-plugin = "^1.1.1"
mkdocs-section-index = "^0.3.9"
mkdocs-spellcheck = "^1.1.0"
mkdocstrings = "^0.30.0"
mkdocstrings-python = "^1.10.2"
nodeenv = "^1.9.1"
packaging = ">=24.0"
pygments = "^2.17.2"
pymdown-extensions = "^10.8.1"
requests = "^2.31.0"
symspellpy = "^6.7.7"
tomli = "^2.0.1"

[tool.poetry.group.tests.dependencies]
coverage = "^7.10.6"
coverage-conditional-plugin = "^0.9.0"
flask = "^3.0.3"
http-server-mock = "^1.7"
linkchecker = "^10.0.0"
pytest = "^8.2.0"
pytest-cov = "^7.0.0"
pytest-depends = "^1.0.1"
pytest-env = "^1.1.3"
pytest-github-report = "^0.0.1"
pytest-html = "^4.1.1"
pytest-order = "^1.2.1"
pytest-repeat = "^0.9.4"
ruff = "0.14.9"

[tool.poetry.scripts]
list-visa-resources = "tm_devices:print_available_visa_devices"

[tool.poetry.urls]
"Bug Tracker" = "https://github.com/tektronix/tm_devices/issues"
"Changelog" = "https://github.com/tektronix/tm_devices/blob/main/CHANGELOG.md"

[tool.pylint.basic]
good-names = ["_"]

[tool.pylint.design]
max-args = 7

[tool.pylint.dunder]
good-dunder-names = [
  "__isabstractmethod__",
]

[tool.pylint.main]
fail-under = 10.0
ignore-patterns = [
  "^\\.#",
  "^\\..*_cache",
  "^\\.docs.*",
  "^\\.env.*",
  "^\\.idea",
  "^\\.results.*",
  "^\\.tox",
  "^\\.venv.*",
  "^\\.vscode",
  "^temp_.*\\..*",
]
jobs = 0
load-plugins = """
pylint.extensions.check_elif,
pylint.extensions.code_style,
pylint.extensions.comparison_placement,
pylint.extensions.consider_refactoring_into_while_condition,
pylint.extensions.dict_init_mutate,
pylint.extensions.docparams,
pylint.extensions.docstyle,
pylint.extensions.dunder,
pylint.extensions.eq_without_hash,
pylint.extensions.for_any_all,
pylint.extensions.no_self_use,
pylint.extensions.overlapping_exceptions,
pylint.extensions.private_import,
pylint.extensions.set_membership,
pylint.extensions.typing,
pylint.extensions.while_used
"""
py-version = "3.9"
recursive = true

[tool.pylint."messages control"]
enable = ["all"]
disable = [
  "broad-exception-caught",  # caught by ruff
  "deprecated-typing-alias",  # caught by ruff
  "duplicate-code",
  "fixme",  # caught by ruff
  "global-statement",  # caught by ruff
  "import-outside-toplevel",  # caught by ruff
  "import-private-name",  # caught by pyright
  "invalid-name",  # caught by ruff
  "line-too-long",  # caught by ruff
  "locally-disabled",  # allowed
  "missing-class-docstring",  # caught by ruff
  "missing-function-docstring",  # caught by ruff
  "missing-module-docstring",  # caught by ruff
  "no-member",  # caught by pyright
  "protected-access",  # caught by ruff
  "raise-missing-from",  # caught by ruff
  "redefined-builtin",  # caught by ruff
  "suppressed-message",  # allowed
  "too-many-ancestors",  # allowed
  "too-many-arguments",  # caught by ruff
  "too-many-branches",  # caught by ruff
  "too-many-lines",  # not necessary to check for
  "too-many-positional-arguments",  # not necessary to check for
  "too-many-statements",  # caught by ruff
  "too-many-statements",  # caught by ruff
  "unexpected-keyword-arg",  # caught by pyright
  "unnecessary-default-type-args",  # not necessary to check for
  "unused-argument",  # caught by ruff
  "unused-import",  # caught by ruff
  "use-implicit-booleaness-not-comparison-to-string",  # caught by ruff
  "while-used",  # using while loops in example scripts
  "wrong-import-order",  # caught by ruff
]

[tool.pylint.reports]
# Python expression which should return a score less than or equal to 10. You
# have access to the variables 'fatal', 'error', 'warning', 'refactor',
# 'convention', and 'info' which contain the number of messages in each category,
# as well as 'statement' which is the total number of statements analyzed. This
# score is used by the global evaluation report (RP0004).
evaluation = "max(0, 0 if fatal else 10.0 - ((float(5.0 * error + (warning + refactor + convention + info)) / statement) * 10.0))"
score = true
output-format = "text"  # colorized could be another option

[tool.pyright]
ignore = [
  "**/*env*/**",
  "**/.tox/**",
  "**/output_*/**",
  "site/**",
  "temp_*.py",
]
pythonPlatform = "All"
pythonVersion = "3.9"
reportCallInDefaultInitializer = "error"
reportImplicitOverride = "none"  # this check is not needed
reportImplicitStringConcatenation = "none"  # this is allowed by this project's formatting standard
reportImportCycles = "none"  # other analysis tools catch these more effectively
reportMissingSuperCall = "none"  # this can be ignored since this would break unit tests if handled incorrectly
reportPropertyTypeMismatch = "none"  # the auto-generated properties can have mismatches
reportShadowedImports = "error"
reportUninitializedInstanceVariable = "error"
reportUnnecessaryTypeIgnoreComment = "error"
reportUnusedCallResult = "none"  # this can be ignored since this would break unit tests if handled incorrectly
strict = ["**"]
stubPath = "src"
typeCheckingMode = "strict"
useLibraryCodeForTypes = true

# Pytest configuration
[tool.pytest.ini_options]
addopts = "--order-scope=module --cov-config=pyproject.toml"
doctest_optionflags = "ELLIPSIS NORMALIZE_WHITESPACE IGNORE_EXCEPTION_DETAIL"
filterwarnings = [
  "ignore:'xdrlib' is deprecated:DeprecationWarning",
  "ignore::DeprecationWarning:pkg_resources",
  "ignore:GPIB library not found:UserWarning",
  "ignore:pkg_resources is deprecated:DeprecationWarning",
]
junit_family = "xunit2"
junit_logging = "all"
log_format = "[%(asctime)s] [%(levelname)8s] %(message)s"
markers = [
  'docs',
  'order',
  'slow',
]
xfail_strict = true

[tool.pytest_env]
pytest_report_title = {skip_if_set = true, value = "Test Results"}

[tool.rstcheck]
ignore_directives = [
  "autoapisummary",  # This is added by sphinx-autoapi
]

[tool.ruff]
line-length = 100
namespace-packages = ["docs/**", "examples/**", "scripts/**", "tests/**"]
output-format = "concise"
src = ["docs", "examples", "scripts", "src", "tests"]
target-version = "py39"  # always generate Python 3.9 compatible code

[tool.ruff.lint]
allowed-confusables = ["¸", "×"]
fixable = ["ALL"]
flake8-pytest-style = {mark-parentheses = false}
flake8-quotes = {docstring-quotes = "double"}
ignore = [
  "ANN401",  # Dynamically typed expressions (typing.Any) are disallowed in *args and **kwargs (allowed in this package)
  "COM812",  # Trailing comma missing (allowed in this package)
  "FA100",  # Missing `from __future__ import annotations`, but uses ... (allowed in this package)
  "FBT",  # flake8-boolean-trap  # TODO: enable this
  "FIX002",  # Line contains TO DO (allowed in this package)
  "ISC001",  # single-line-implicit-string-concatenation (handled by formatter)
  "PYI021",  # Docstrings should not be included in stubs (allowed in this package)
  "TD002",  # Missing author in TO DO (allowed in this package)
  "TD003",  # Missing issue link on the line following this TO DO (allowed in this package)
  "UP006",  # Use {to} instead of {from} for type annotation # TODO: Drop Python 3.9: enable this check
  "UP007",  # Use `X | Y` for type annotations # TODO: Drop Python 3.9: enable this check
  "UP024",  # Replace aliased errors with `OSError` (allowed in this package)
  "UP035",  # `X` is deprecated, use `Y` instead # TODO: Drop Python 3.9: enable this check
  "UP037",  # Remove quotes from type annotation # TODO: Drop Python 3.9: enable this check
  "UP045",  # Use `X | None` for type annotations # TODO: Drop Python 3.9: enable this check
]
pydocstyle = {convention = "google"}
pylint = {max-args = 7}
# https://beta.ruff.rs/docs/rules/
select = [
  "ALL",
]
task-tags = ["FIXME", "FUTURE", "RELIC", "TODO"]

[tool.ruff.lint.flake8-builtins]
builtins-strict-checking = false  # This makes the comparison with builtins use the full module path, rather than just the module name

[tool.ruff.lint.isort]
force-sort-within-sections = false
known-first-party = [
  "conftest",
  "mock_server",
  "tm_devices",
]
lines-between-types = 1
order-by-type = false

[tool.ruff.lint.per-file-ignores]
"examples/**" = [
  "FBT",  # flake8-boolean-trap
  "S101",  # Use of assert detected
  "T201",  # `print` found
]
"examples/miscellaneous/custom_device_driver_support.py" = [
  "ARG002",  # Unused method argument
  "D102",  # Missing docstring in public method
]
"src/tm_devices/commands/**" = [
  "A003",  # Class attribute is shadowing a python builtin
  "D104",  # Missing docstring in public package
  "D107",  # Missing docstring in `__init__`
  "ERA001",  # Found commented-out code
  "S105",  # Possible hardcoded password
  "TID252",  # Relative imports from parent modules are banned
]
"tests/**" = [
  "PLC1901",  # compare-to-empty-string
  "PLR2004",  # Magic value used in comparison
  "PTH107",  # `os.remove()` should be replaced by `Path.unlink()`
  "S101",  # Use of assert detected
]
"tests/samples/golden_stubs/**" = [
  "D100",  # Missing docstring in public module
  "D101",  # Missing docstring in public class
  "D107",  # Missing docstring in `__init__`
  "PYI053",  # String and bytes literals longer than 50 characters are not permitted
]

[tool.semantic_release]
version_toml = [
  "pyproject.toml:tool.poetry.version",
]

[tool.semantic_release.changelog]
exclude_commit_patterns = []
template_dir = "python_semantic_release_templates"

[tool.semantic_release.changelog.environment]
extensions = []

[tool.semantic_release.commit_parser_options]
# These settings allow python-semantic-release to be used without triggering on any commits
allowed_tags = []
minor_tags = []
patch_tags = []

[tool.tomlsort]
all = true
in_place = true
spaces_before_inline_comment = 2
trailing_comma_inline_array = true
overrides."tool.coverage.paths.*".inline_arrays = false
overrides."tool.poetry.*".inline_arrays = false
overrides."tool.pylint.*".table_keys = false

# Tox configuration
[tool.tox]
legacy_tox_ini = """
[tox]
requires = tox>4
isolated_build = True
envlist = py39,py310,py311,py312,py313,tests,docs,doctests
skip_missing_interpreters = True
labels =
  basic = py39,py310,py311,py312,py313,tests
  documentation = docs,doctests

[gh-actions]
python =
    3.9: py39
    3.10: py310
    3.11: py311
    3.12: py312
    3.13: py313

[testenv]
package = wheel
install_command = python -I -m pip install --upgrade --upgrade-strategy=eager {opts} {packages}
deps =
    poetry
passenv =
    PYRIGHT_PYTHON_GLOBAL_NODE  # If set outside of tox, this will cause python-pyright to use nodeenv to install node rather than use the system node
setenv =
    COVERAGE_FILE = .coverage_{envname}
    DOC_PYTHON_VERSION = python3.11  # Keep this in sync with .readthedocs.yml and any CI scripts
    # Skip pre-commit checks that are not needed
    SKIP = file-contents-sorter
commands_pre =
    python -m poetry install --no-root --without=main
commands =
    !tests: python -c "import shutil; shutil.rmtree('.dist/{envname}', ignore_errors=True)"
    !tests: poetry build --output=.dist/{envname}
    !tests: twine check --strict .dist/{envname}/*
    !tests: pre-commit run --all-files --show-diff-on-failure
    !tests: pytest -vv --doctest-modules --doctest-report=ndiff --showlocals --junitxml={tox_root}/.results_{envname}/results_doctests.xml --self-contained-html --html={tox_root}/.results_{envname}/results_doctests.html src
    pytest -vv -k "not test_docs" --showlocals --cov --junitxml={tox_root}/.results_{envname}/results.xml --cov-report=term --cov-report=xml:{tox_root}/.coverage_{envname}.xml --cov-report=html:{tox_root}/.results_{envname}/html --self-contained-html --html={tox_root}/.results_{envname}/results.html

[testenv:tests]
basepython = python
deps =
    -rtests/requirements.txt
passenv =
    pytest_report_title
setenv =
    pytest_github_report = true
    pytest_use_blanks = true
    GITHUB_STEP_SUMMARY = {tox_root}/.results_{envname}/github_report.md
commands_pre =

[testenv:docs]
basepython = {env:DOC_PYTHON_VERSION}
passenv =
    GITHUB_PAT
deps =
    -rdocs/requirements.txt
commands_pre =
    nodeenv --python-virtualenv --clean-src
    python scripts/install_insiders_packages.py
commands =
    python -c "import shutil; shutil.rmtree('.results_{envname}', ignore_errors=True)"
    mkdocs --verbose build --site-dir .results_{envname}

[testenv:doctests]
basepython = {env:DOC_PYTHON_VERSION}
passenv =
    GITHUB_PAT
deps =
    -rdocs/requirements.txt
    -rtests/requirements.txt
commands_pre =
    nodeenv --python-virtualenv --clean-src
    python scripts/install_insiders_packages.py
commands =
    pytest -v -k "test_docs" --showlocals --junitxml={tox_root}/.results_{envname}/results.xml --self-contained-html --html={tox_root}/.results_{envname}/results.html

[testenv:export-reqs]
commands =
    poetry export --without-hashes --without-urls --all-extras --only=docs --output=docs/requirements.txt
    poetry export --without-hashes --without-urls --all-extras --only=tests --output=tests/requirements.txt
    - pre-commit run -a requirements-txt-fixer
"""
